--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -3,4 +3,34 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
+    'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+}
+
+section {
+  margin: 20px 0;
+  display: flex;
+  justify-content: center;
+}
+
+#run {
+  margin-bottom: 10px;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 5px;
+  background-color: #4caf50; /* Green */
+}
+
+#score-info {
+  margin-bottom: 10px;
+}
+
+.msg {
+  margin: 10px 0;
 }
