--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -8,10 +8,19 @@ body {
     'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
+main {
+  height: auto;
+  display: grid;
+  grid-gap: 1rem;
+  grid-template-columns: repeat(3, 1fr);
+}
+
 section {
   margin: 20px 0;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  padding: 1rem;
+  justify-content: space-between;
 }
 
 #run {
@@ -27,8 +36,9 @@ section {
   background-color: #4caf50; /* Green */
 }
 
-#score-info {
+.score-info {
   margin-bottom: 10px;
+  height: 50px;
 }
 
 .msg {
