--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -1,7 +1,11 @@
+* {
+  box-sizing: border-box;
+}
+
 html,
 body {
   height: 100%;
-  margin: 0;
+  margin: 20px 40px;
   padding: 0;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
@@ -20,11 +24,17 @@ section {
   display: flex;
   flex-direction: column;
   padding: 1rem;
-  justify-content: space-between;
+  justify-content: start;
+}
+
+#results > a {
+  font-size: 18px;
+  font-weight: bold;
+  text-align: center;
 }
 
 #run {
-  margin-bottom: 10px;
+  margin: 10px 0px;
   border: none;
   color: white;
   padding: 15px 32px;
@@ -36,9 +46,29 @@ section {
   background-color: #4caf50; /* Green */
 }
 
+fieldset {
+  border-radius: 5px;
+  border-style: solid;
+  border-color: black;
+}
+
 .score-info {
   margin-bottom: 10px;
-  height: 50px;
+  /* height: 100px; */
+  width: 100%;
+  border: 2px solid black;
+  border-radius: 5px;
+  padding: 10px;
+  text-align: center;
+}
+
+.score-info > a {
+  font-size: 18px;
+}
+
+.score-info > p {
+  font-size: 18px;
+  font-weight: bold;
 }
 
 .msg {
