--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -5,11 +5,15 @@
 html,
 body {
   height: 100%;
-  margin: 20px 40px;
+  margin: 20px;
   padding: 0;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
     'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+}
+
+pre {
+  background-color: lightgray;
 }
 
 main {
